# coco-devboards

./: CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt
coco/canable02/: canable02.ld
coco/canable02/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/emu/coco/board/: debug.cpp
coco/native/coco/board/: FlashTest.hpp  InOutTest.hpp  QuadratureDecoder.hpp  QuadratureDecoderTest.hpp  SpiTest.hpp  StorageTest.hpp  TriggerTest.hpp  UsbDevice.hpp  debug.cpp
coco/nrf52dongle/: nrf52dongle.ld
coco/nrf52dongle/coco/board/: FlashTest.hpp  InOutTest.hpp  QuadratureDecoder.hpp  QuadratureDecoderTest.hpp  SpiTest.hpp  StorageTest.hpp  SystemInit.cpp  TriggerTest.hpp  UsbDevice.hpp  config.hpp  debug.cpp
coco/nucleo-c031c6/: nucleo-c031c6.ld
coco/nucleo-c031c6/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/nucleo-f401re/: nucleo-f401re.ld
coco/nucleo-f401re/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/nucleo-g0b1re/: nucleo-g0b1re.ld
coco/nucleo-g0b1re/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/nucleo-g431rb/: nucleo-g431rb.ld
coco/nucleo-g431rb/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/nucleo-g474re/: nucleo-g474re.ld
coco/nucleo-g474re/coco/board/: SystemInit.cpp  config.hpp
coco/nucleo-g491re/: nucleo-g491re.ld
coco/nucleo-g491re/coco/board/: SystemInit.cpp  config.hpp
coco/nucleo-h503rb/: nucleo-h503rb.ld
coco/nucleo-h503rb/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/nucleo-h563zi/: nucleo-h563zi.ld
coco/nucleo-h563zi/coco/board/: SystemInit.cpp  config.hpp
coco/nucleo-u385rg-q/: nucleo-u385rg-q.ld
coco/nucleo-u385rg-q/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/stm32c031nucleo/: stm32c031nucleo.ld
coco/stm32c031nucleo/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/stm32f051discovery/: link.ld
coco/stm32f051discovery/coco/board/: FlashTest.hpp  InOutTest.hpp  SpiTest.hpp  StorageTest.hpp  SystemInit.cpp  TriggerTest.hpp  config.hpp  debug.cpp
coco/stm32f0discovery/: stm32f0discovery.ld
coco/stm32f0discovery/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/stm32f3348discovery/: stm32f3348discovery.ld
coco/stm32f3348discovery/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/stm32f401nucleo/: stm32f401nucleo.ld
coco/stm32f401nucleo/coco/board/: SystemInit.cpp  debug.cpp
coco/stm32g431nucleo/: link.ld  stm32g431nucleo.ld
coco/stm32g431nucleo/coco/board/: SystemInit.cpp  config.hpp  debug.cpp
coco/stm32g474nucleo/: link.ld  stm32g474nucleo.ld
coco/stm32g474nucleo/coco/board/: SystemInit.cpp  config.hpp
test/: AssertTest.cpp  CMakeLists.txt  SleepTest.cpp
